--- a/README
+++ b/README
@@ -1,18 +1,1 @@
- This is a project management application. :) Huh.. Please dont ask me Why I am wasting time.
-
- I am trying to develop this application based on the user perspective rather than looking into it as a
- member of a project.
-
- Obiviously it is more or like Redmine,unfuddle or basecamp. Actually I am trying to make something which has all the features of the above.
-
- Lets see How long I am looking on this. Currently you can do the following
-
- * Create project with fully supported git integration
-      I use grit for accessing the git. I think a part of unfuddle is done
- 
- *  tickets ,Messages, keys for importing to git ( most part of unfuddle option)
-
- * GTD ( to know more about that pls look on wikipedia )
-
- Still lot more have to be done. :)
-
+This file has been moved to <a href="http://wiki.github.com/squirrel/isotope"> Wiki </a>.
