--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This file has been moved to <a href="http://wiki.github.com/squirrel/isotope"> Wiki </a>.
+This file has been moved to http://wiki.github.com/squirrel/isotope.
